infra/gitops/03-services/blog-backend-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-backend-api
  labels:
    app: blog-backend-api
spec:
  type: ClusterIP
  selector:
    app: blog-backend-api
  ports:
    - name: http
      port: 8080
      targetPort: http
